# mdscalpel

./: .gitignore  README.md  pyproject.toml
mdscalpel/: __init__.py  cli.py  core.py
tests/: test_core.py
